# webster

./: .gitignore  .sourcery.yaml  README.md  pyproject.toml
src/webster/: __init__.py  __main__.py  api.py  chat.py  cli.py  console.py  embed.py  scrape.py  tools.py  utils.py
