[project]
name = "webster"
version = "0.2.0"
description = "website chat via LM Studio + Langchain + ChromaDB!"
authors = [
    {name = "hex benjamin", email = "hex@hexbenjam.in"},
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "rich>=13.6.0",
    "click>=8.1.7",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "GPL-v3-or-later"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
dev = [
    "sourcery>=1.13.0",
]
