[project]
name = "webster"
dynamic = ["version"]
description = "website chat via LM Studio + Langchain + ChromaDB!"
authors = [
    {name = "hex benjamin", email = "hex@hexbenjam.in"},
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "rich>=13.6.0",
    "click>=8.1.7",
    "aiohttp>=3.8.6",
    "addict>=2.4.0",
    "html2text>=2020.1.16",
    "langchain>=0.0.331",
    "openai==v0.28.1",
    "chromadb>=0.4.15",
    "chardet>=5.2.0",
    "sentence-transformers>=2.2.2",
    "unstructured>=0.10.29",
    "markdown>=3.5.1",
    "torch>=2.1.0",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "GPL-v3-or-later"}

[project.scripts]
webster = "webster.cli:run"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
dev = [
    "sourcery>=1.13.0",
    "langchainhub>=0.1.13",
]

[[tool.pdm.source]]
name = "torch121"
url = "https://download.pytorch.org/whl/cu121"
include_packages = ["torch", "torchvision", "torchaudio"]

[tool.setuptools.dynamic]
version = {attr = "webster.__version__"}
